welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: type mismatch;
 found   : Int
 required: java.awt.Color
  var couleurs = Array[Color](hauteurMonde)
                              ^