welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var hauteurMonde:Int = getMondeHauteur()
  var largeurMonde:Int = getMondeLargeur()
  
  var couleurs = Array[Color](hauteurMonde)
  
  for (i <- 1 to hauteurMonde) {
    couleurs(i) = getCouleurSol()
    
    avance()
  }
  
  recule(hauteurMonde - 1)
}